--- a/index3.html
+++ b/index3.html
@@ -271,7 +271,7 @@
             </div>
         </div>
 
-        <!----------------------------   Data-gym editar ----------------------->
+        <!----------------------------   Data-gym modificar ----------------------->
         <div
             data-gym="modificar"
             class="container-lg p-0 rounded"
