--- a/index3.html
+++ b/index3.html
@@ -281,16 +281,16 @@
         >
             <!--  boton volver y modificar -->
             <header
-                class="container-lg bg-dark text-white px-2 py-3 text-center position-relative"
+                class="container-lg bg-dark d-flex justify-content-left text-white px-1 rounded"
             >
-                <h1 class="fs-5 mb-0">Modificar entrenamiento</h1>
-
                 <img
                     src="imagenes/volver.svg"
                     alt="ícono volver"
                     class="volver"
                     style="width: 2vw; height: auto"
                 />
+
+                <h1 class="fs-3 mt-3 mb-2 mx-auto">Editar entrenamiento</h1>
             </header>
 
             <section class="container-lg py-5">
